--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			</div>
 		</div>
 	</div>
+	<!-- separator -->
 	<div class="separatorBlack2">
 		<img src="./images/aboutMe/separatorBlack2.svg" alt="separator black 2">
 	</div>
